# coding-agents

./: .gitignore  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: update-canvas-sdk-context.yml
canvas-plugin-assistant/: .gitignore  CLAUDE.md  README.md  SETUP_MANUAL_INSTALL.md  model_costs.json  sandbox-allowlist.md
canvas-plugin-assistant/.claude/: settings.json
canvas-plugin-assistant/.claude-plugin/: plugin.json
canvas-plugin-assistant/agents/: deploy-uat.md  instance-analyzer.md  plugin-brainstorm.md
canvas-plugin-assistant/commands/: analyze-instance.md  check-setup.md  coverage.md  create-icon.md  database-performance-review.md  deploy-lite.md  deploy.md  new-plugin.md  product-review.md  run-evals.md  security-review.md  wrap-up.md
canvas-plugin-assistant/evals/: README.md  case_index.md
canvas-plugin-assistant/hooks/: hooks.json
canvas-plugin-assistant/scripts/: aggregate_costs.py  base_logger.py  compare_review_results.py  constants.py  convert-svg-to-png.py  convert_svg_to_png.py  cost-logger.py  cost_logger.py  export-session-history.py  export_session_history.py  get-workspace-dir.py  get_plugin_dir.py  git_commit_plugin.py  hook_information.py  lint_manifest.py  lint_sandbox.py  mcp_canvas_installer.py  scrape_canvas_instance.py  secret_requester.py  session_end_orchestrator.py  update-pricing.py  update_pricing.py  user_input_logger.py  validate_cpa_environment.py  verify-plugin-structure.py  verify_plugin_structure.py
claude-code/: README.md
pytest-forge/: README.md
tests/: conftest.py  helpers.py
(+147 files in other folders)
